--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,4 +29,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Generate latest feed
-        run: cron.sh .rss
+        run: ./cron.sh .rss
