add: commit changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,3 +49,9 @@ jobs:
 
     - name: Generate latest feed
       run: bin/doidw2rss.py .rss
+      
+    - name: data push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        directory: data
