--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,9 @@ jobs:
 
     - name: Generate latest feed
       run: bin/doidw2rss.py feed.rss
+    
+    - name: Commit feed.rss
+      run: git config --global user.email "action@example.org"; git config --global user.name "Github Action"; git commit -m"Feed update." feed.rss
       
     - name: RSS push changes
       uses: ad-m/github-push-action@master
